fixed profile and map spacing

--- a/static/styles/mystyles.css
+++ b/static/styles/mystyles.css
@@ -77,9 +77,6 @@ a:hover, a:focus {
 
 .form-control, .btn {
     margin-bottom: 5px;
-
-}.form-inline .form-control, .form-inline .btn {
-    margin-bottom: -5px;
 }
 
 input[type="password"]::-webkit-input-placeholder,
